# nbdkit-smb-plugin

./: README.md  meson.build
nbdkit_smb_plugin/: plugin.c  plugin_binding.cpp  plugin_binding.h  smb.cpp  smb.hpp  url_parser.cpp  url_parser.hpp
test/: test_get_space_info.cpp
